= 3.4.8 (not released yet)
- set parent data when adding new record on subform of a create form on a embedded or nested list

= 3.4.7
- sorting by primary key added by default only for postgres, on mysql it will avoid using index to sort (you can see using filesort on explain), slowdown sorting
- fix set_parent on rails 3.2 with attr_accessible
- fix saving changes on render_field when blank row is changed and request render_field action

= 3.4.6
- Add paper_trail bridge (requires 3.0.5 version for nested support). It adds:
    - a collection link to deleted action which display deleted_records
    - a member link to PaperTrail::VersionsController which display changes for current record. PaperTrail::VersionsController must be added, not included with ActiveScaffold.
- Focus first element on persistent create forms when form is reloaded
- Fix linking to non-namespaced controller from namespaced controller

= 3.4.5
- Fix default sorting on ruby 1.8
- Fix add existing button, broken on 3.4.4
- add active_scaffold_checkbox_option so rendering li of checkbox_list can be overrided
- Fix set_parent for render field on main form columns

= 3.4.4
- Fix set_parent for render field on blank records added by default on subforms
- Enable sorting on selected draggable list, so it can be used on config_list
- Remove unfinished nested_auto_open feature, it was working only if render_component is used, which is not recommended way
- Allow to set sorting on multiple columns with a hash, ruby 1.9 hashes keep order so an array of hashes is not needed anymore, although it still works.
- Fix overriding default sorting (with config.list.user.sorting.set) without changing config.list.sorting

= 3.4.3
- default search columns doesn't include association columns (broken on 3.4.2), it slowing down search with no point (searching by association's primary key)
- More unobtrusive html views, activescaffold html views doesn't use javascript anymore so JS files can be loaded at page bottom
